--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ language: "en-uk"
 name: "another world"
 description: "where you can live a thousand lives in one"
 
-short_url: "jekyllt.github.io/jasper/"
+short_url: "a2jinhee.github.io/"
 google_analytics: UA-69281367-1
 disqus: username
 # edit baseurl to simply '/' if using as your personal page (instead of a project page)
@@ -44,13 +44,13 @@ plugins: [jekyll-paginate]
 # or "master" otherwise
 safe: false
 lsi: false
-username: jekyllt
-repo: jasper
-branch: master
+username: a2jinhee
+repo: a2jinhee.github.io
+# branch:
 relative_source: ../jasper/
 destination: ../jasper-pages/
-production_url: https://jekyllt.github.io/jasper/
-source_url: https://github.com/jekyllt/jasper/
+production_url: https://a2jinhee.github.io/
+source_url: https://github.com/a2jinhee/a2jinhee.github.io/
 
 exclude:
   - README.md
